Enhancements of the simple account wizard and the "Add contact" window.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3897 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/impl/gui/resources.properties
+++ b/resources/languages/impl/gui/resources.properties
@@ -32,6 +32,7 @@ accountRegistrationWizard=Account Registration Wizard
 accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
 add=&Add
+addAccount=Add account
 addContact=&Add contact
 addContactError=Failed to add contact with id: {0}
 addContactErrorTitle=Add contact Error
@@ -287,7 +288,7 @@ selectGroupWizard=The list below contains all groups in your Contact List. Selec
 selectGroupWizardTitle=Specify group
 selectProvidersForChatRoom=The list below contains all accounts that support the multi user chat feature. Select the one you would like to use to create your chat room.
 selectProvidersWizard=The list below contains all registered accounts. Select the one you would like to use to communicate with the new contact.
-selectProvidersWizardTitle=Select account(s)
+selectProvidersWizardTitle=Select account
 send=&Send
 sendFile=Send &file
 selectContactSupportingInfo=There is no info for this contact.
