--- a/resources/languages/plugin/simpleaccreg/resources.properties
+++ b/resources/languages/plugin/simpleaccreg/resources.properties
@@ -1,4 +1,5 @@
-initialAccountRegistration=Configure all your favorite protocols in one click.
+initialAccountRegistration=Sign in to all of your Instant Messengers from here.
 signin=Sign in
-signup=Sign up
+signup=Not registered yet?
+specialSignup=Not registered yet ? - click here to get a new username
 cancel=Cancel
