--- a/resources/languages/impl/gui/resources_de.properties
+++ b/resources/languages/impl/gui/resources_de.properties
@@ -230,7 +230,7 @@ removeGroup=&Lösche Gruppe
 rename=&Umbenennen
 renameContact=Kontakt umbenennen
 renameContactWizard=Bitte geben Sie den Namen für den Kontakt ein.
-renameGroup=Gruppe umbenenne
+renameGroup=Gruppe umbenennen
 renameGroupInfo=Bitte geben Sie den Namen für die Gruppe ein.
 request=&Anforderung
 requestAuthorization=&Authorisierungsanforderung
