uinAndPassword property key renamed to AimUinAndPassword
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3996 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources_it.properties
+++ b/resources/languages/resources_it.properties
@@ -341,7 +341,7 @@ protocolName=servizio messaggi istantanei (AIM)
 protocolDescription=descrizione di protocollo per il servizio AIM
 id=nome schermo AIM
 password=password
-uinAndPassword=UIN e password
+aimUinAndPassword=UIN e password
 registerNewAccount=registra nuovo account
 registerNewAccountText=se non hai un account AIM, premi questo tasto per crearne uno nuovo
 existingAccount=l'account immesso e' gia' stato installato
