--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -382,7 +382,7 @@ protocolNameAim=AIM
 protocolDescriptionAim=The AIM service protocol
 id=AIM Screenname:
 password=Password:
-uinAndPassword=UIN and Password
+aimUinAndPassword=UIN and Password
 registerNewAccount=Register new account
 aimRegisterNewAccountText=In case you don't have an AIM account, click on this button to create a new one.
 existingAccount=* The account you entered is already installed.
