--- a/resources/languages/resources_de.properties
+++ b/resources/languages/resources_de.properties
@@ -381,7 +381,7 @@ protocolDescription=Das AOL/ICQ-Protokoll
 uin=ICQ UIN:
 password=Passwort:
 rememberPassword=Speichere Passwort
-uinAndPassword=UIN und Passwort
+aimUinAndPassword=UIN und Passwort
 registerNewAccount=Erstelle neues Benutzerkonto
 registerNewAccountText=Wenn Sie kein ICQ-Benutzerkonto haben, können Sie hier eines anlegen.
 existingAccount=* Dieses Benutzerkonto existiert bereits.
