Some rename "username" property key for Jabber account registration wizard to jabberUsername
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@3998 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -481,7 +481,7 @@ serverIRC=Server
 # jabber accregwizz
 protocolNameJabber=JABBER
 protocolDescriptionJabber=The Jabber protocol
-username=Jabber username
+jabberUsername=Jabber username
 password2=Confirm password
 userIDAndPassword=ID and Password
 cserver=Server
