Moving the AutoAway configuration to the general configuration form. (Patch by Damien Roth). Improved the text of Exception messages in OpSetBasicTelephonySipImpl Cosmetic fixes in the media package Reduced default logging level
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4000 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -578,12 +578,10 @@ knownHosts=Known Hosts:
 accountDetails=SSH Account Details
 
 # status update
-cancel=Cancel
-enable=Enable
-info=Information
+automaticStatus=Automatic Status
+enableChangeStatus=Change status while away
+awayMinutes=Minutes before being away :
 infotext=Set "Idle", when your computer is not used for X minutes. The status is reset to the status before, when activity is detected.
-menuEntry=Automatic Status
-minutes=Minutes
 
 # updatechecker
 dialogTitle=New version available
