Removed an empty file. Renamed the "Automatic Status" configuration tab to "Auto Away"
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4001 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -578,9 +578,9 @@ knownHosts=Known Hosts:
 accountDetails=SSH Account Details
 
 # status update
-automaticStatus=Automatic Status
+automaticStatus=Auto Away
 enableChangeStatus=Change status while away
-awayMinutes=Minutes before being away :
+awayMinutes=Minutes before switching to away :
 infotext=Set "Idle", when your computer is not used for X minutes. The status is reset to the status before, when activity is detected.
 
 # updatechecker
