--- a/resources/languages/resources_de.properties
+++ b/resources/languages/resources_de.properties
@@ -12,6 +12,7 @@ accountRegistrationWizard=Kontoverwaltung
 accounts=Benutzerkonten
 activateOnlyWhenMinimized=Nur aktivieren wenn minimiert
 add=&Hinzufügen
+addAccount=Konto hinzufügen
 addContact=Kontakt &hinzufügen
 addContactError=Kann Kontakt mit id {0} nicht hinzufügen
 addContactErrorTitle=Fehler beim Kontakthinzufügen
@@ -23,7 +24,9 @@ addGroupNetError=Kann Gruppe "{0}" nicht hinzufügen. Überprüfen Sie Ihre Netz
 addGroupError=Kann Gruppe "{0}" nicht hinzufügen.
 addGroupErrorTitle=Fehler beim "Gruppe hinzufügen"
 addGroupExistError=Die Gruppe "{0}" existiert bereits in Ihrer Kontaktliste
+addGroup=Gruppe erstellen
 addSubcontact=&Unterkontakt hinzügen
+advanced=Erweitert
 all=&Alle
 allContacts=&Alle Kontakte
 alwaysOnTop=immer im Vordergrund
@@ -111,6 +114,7 @@ edit=&Ändern
 emptyHistory=&Leere Protokoll 
 enableNotifications=Aktiviere Meldungen
 enableTypingNotifications=Aktiviere Schreib-Notifizierung
+enterPhoneNumber=Geben Sie die Telefonnummer ein
 error=Fehler
 exit=B&eenden
 extendedCriteria=Erweitere die Kriterien
@@ -128,6 +132,7 @@ first=Erster
 font=Schriftart
 haveToBeConnectedToJoin=Sie müssen verbunden sein, um einer Gesprächsrunde beizutreten. Bitte verbinden Sie sich und versuchen Sie es erneut.
 haveToBeConnectedToLeave=Sie müssen verbunden sein, um eine Gesprächsrunde zu verlassen. 
+haveToBeConnectedToLeave=Sie müssen verbunden sein, um den Chat-Room zu verlassen
 help=?
 hideOffline=Ausblenden
 hideOfflineContacts=Inaktive Kontakte ausblenden
@@ -164,6 +169,8 @@ launchOnStartUp=Ausführen beim Starten
 leave=&Verlassen
 limitReachedForIp=Sie haben schon zu viele Verbindungen von Ihrer IP-Addresse und der Server {0} erlaubt keine weiteren.
 login=&Anmelden
+loginNetworkError=<DIV>Bei der Anmeldung mit dem Konto {0} am Server {1} ist ein Fehler aufgetreten.<BR>\Überprüfen Sie die Netzwerkverbindung</DIV>
+
 loginNotSucceeded=Bei der Anmeldung mit dem Konto {0} am Server {1} ist ein Fehler aufgetreten.
 loginGeneralError=Ein Fehler ist beim Anmelden aufgetreten: User name: {0}, Server name: {1}.
 loginInternalError=Ein Fehler ist beim Anmelden aufgetreten: User name: {0}, Server name: {1}. Dies ist wahrscheinlich ein Fehler in der Anwendung. Bitte senden Sie diesen Fehler an issues@sip-communicator.dev.java.net.
@@ -172,6 +179,7 @@ loginWindowTitle=Anmelden {0}
 logoffNotSucceeded=Bei der Abmeldung mit dem Konto {0} vom Server {1} ist ein Fehler aufgetreten.
 me=mich
 modify=&Ändern
+move=Verschieben
 moveSubcontactMsg=Wählen Sie den Kontakt aus, den Sie verschieben wollen.
 moveSubcontact=&Verschiebe Unterkontakt.
 moveSubcontactInSameContact=Der Zielkontakt ist der selbe wie der Ausgangskontakt. Wählen Sie einen anderen aus!
@@ -181,11 +189,13 @@ moveContactError=&Kontakt kann nicht verschoben werden
 msgDeliveryFailure=Diese Nachricht konnte nicht zugestellt werden.
 msgDeliveryOfflineNotSupported=Das verwendetet Protokoll kann Nachrichten nur zustellen, wenn Benutzer online sind. Warten Sie darauf, oder verwenden Sie ein anderes Protokoll.
 msgDeliveryInternalError=Ein interner Fehler ist aufgetreten. Dies ist wahrscheinlich ein Bug. Bitte melden Sie ihn unter http://www.sip-communicator.org/index.php/Development/BugsAndIssues
+msgDeliveryUnknownError=Ihre Nachricht konnte nicht zugestellt werden:
 msgNotDelivered=Ein Netzwerkproblem ist aufgetreten.
 msgReceived={0} hat Ihnen eine Nachricht gesendet.
 msgSendConnectionProblem=Sie sollen verbunden sein, um Nachrichten zu senden.
 multipleLogins=Sie sind mehrfach mit dem selben Konto verbunden. Das Konto User name: {0}, Server name: {1} ist derzeit nicht verbunden.
 name=Name
+network=Netzwerk
 networkFailure=Netzwerkfehler
 next=&Weiter
 new=&Neu
@@ -238,6 +248,7 @@ requestAuthorizationInfo=Kann {0} nicht zur Liste der Kontakte hinzufügen. {0} 
 requestAuthReason=Grund der Anfrage
 requestAuthReasonEnter=Geben Sie den Grund der Anforderung ein
 responseAuthReasonEnter=Geben Sie den Grund der Antwort ein
+retry=Wiederholen
 rootGroup=Hauptgruppe
 save=&Speichern
 search=&Suche
@@ -259,15 +270,20 @@ selectContactSupportingInfo=Für diesen Kontakt ist keine Information verfügbar
 sendMessage=Nachricht &Senden
 sendAsSms=SMS Versenden
 sendSms=SMS vers&enden
+sendSmsDetails=Die Telefonnummer muss im internationen Format eingegeben werden \
+zum Beispiel mit +43 für österreichische Nummern, +43664XXXXXXX.
 sendSmsNotSupported=Das ausgewählte Protokoll unterstützt den Versand vom SMS nicht.
 sendVia=Senden via
 setStatusMessage=Statusinformation setzen
 settings=&Einstellungen
 showCallPanel=Zeige Telefonfeld
 showChannelsList=Zeige Kanalliste
+showOffline=Zeige
 showOfflineUsers=Verstecke/Zeige Benutzer, die offline sind.
-specifyReason=Geben Sie den Grund für diese Operation ein.
+signin=Anmelden
 smiley=Smiley
+smsSuccessfullySent=SMS erfolgreich gesendet!
+smsSendConnectionProblem=Sie müssen verbunden sein, um SMS zu versenden. Bitte verbinden Sie sich mit Ihrem SMS Anbieter.
 specifyReason=In diesem Feld können Sie eine Begründung für die Aktion eingeben.
 sound=Ton
 soundOnOff=Ton ein/aus
@@ -283,6 +299,7 @@ typeYourRequest=Schreiben Sie Ihre Anfrage hier
 uin=User identifier:
 unknown=Benutzer unbekannt
 useCtrlEnterToSend=Benutze Ctrl-&Enter zum senden
+username=Benutzername
 msgDeliveryFailedUnknownError=Unbekannter Fehler beim Zustellen der Nachricht.
 unregisteredMessage=Fehler beim Verbinden über das folgende Konto: Benutzername: {0}, Servername: {1}. Sie sind nicht verbunden.
 updateAutomatically=Installiere Updates automatisch
@@ -305,47 +322,62 @@ september=Sep
 october=Okt
 november=Nov
 december=Dez
-# Author: Thomas Hofer
-trayIcon=resources/images/impl/systray/systrayIcon.png
-trayIconWindows=resources/images/impl/systray/systrayIconWindows.png
-trayIconMacOSX=resources/images/impl/systray/systrayIconMacOSX.png
-trayIconMacOSXWhite=resources/images/impl/systray/systrayIconMacOSXWhite.png
-addContactIcon=resources/images/impl/gui/buttons/addContactIcon.png
-statusMenuIcon=resources/images/impl/systray/statusIcon.png
-settingsMenuIcon=resources/images/impl/gui/buttons/configureIcon.png
-closeMenuIcon=resources/images/impl/systray/quit.png
-messageIcon=resources/images/impl/systray/envelope.png
-messageIconWindows=resources/images/impl/systray/envelopeWindows.png
-messageIconMacOSX=resources/images/impl/systray/envelopeMacOSX.png
-messageIconMacOSXWhite=resources/images/impl/systray/envelopeMacOSXWhite.png
-newStatusMessageIcon=resources/images/impl/gui/common/renameDialogIcon.png
-settings=Einstellungen...
-addContact=Kontakt hinzufügen...
+
+# systray
 setStatus=Status
-close=Schließen
 onlineStatus=Online
 offlineStatus=Offline
 messageReceived=Nachricht erhalten von
 failedToLoadAddContactDialog=Der "Kontakt hinzufügen"-Dialog konnte nicht gestartet werden.
-setStatusMessage=Setze Statusnachricht
-newStatusMessage=Neue Statusnachricht
-statusMessageInfo=Im Eingabefeld können Sie die neue Statusnachricht angeben.
-noMessage=Keine Nachricht.
-newMessage=Neue Nachricht...
-brbMessage=Ich bin gerade nicht da, komme aber wieder.
-ok=&Ok
+
+# account info
+accountInfo=Benutzerinformation für 
+title=Account Info
+browse=Durchsuchen
+summaryDesc=Zusammenfassung für Benutzerkonto für 
+extended=Erweitert
+extendedDesc=Erweiterte Information für 
+notSupported=Keine Informationen verfügbbar.
+clickWeb=Click for Web Info
+webInfo=Web Info
+firstNameNS=Vorname:
+middleNameNS=Zweiter Vorname:
+lastNameNS=Nachname:
+ageNS=Alter:
+bdayNS=Geburtsdatum:
+genderNS=Geschlecht:
+emailNS=E-mail:
+phoneNS=Telefon:
+userPictures=Fotos
+change=Ändern
+onlyMessages=Nur Nachrichten
+
+# aimaccregwizz
+protocolNameAim=AIM
+protocolDescriptionAim=Das AIM service protocol (AOL Instant Messenger)
+id=AIM Screenname:
+password=Passwort:
+aimUinAndPassword=UIN und Passwort
+registerNewAccount=Neuen Account anlegen
+aimRegisterNewAccountText=Wenn Sie keinen AIM Account haben, klicken Sie um einen neuen zu erstellen.
+existingAccount=* Dieses Konto ist bereits installiert.
+ovverideServerOps=Überschreibe Servereinstellungen
+advancedOptions=Erweiterte Einstellungen
+proxy=Proxy
+proxyPort=Proxy port
+proxyType=Proxy type
+proxyUsername=Proxy username
+proxyPassword=Proxy password
 
 # branding
 aboutWindowTitle=Über {0}
 logoMessage=Open Source VoIP & Instant Messaging
 loading=Lade
 aboutMenuEntry=Über
-ok=OK
-basedOn=basierend auf
-welcomeMessage=<DIV color={0}>{1} ist derzeit in Entwicklung. \
-               Diese Version dient nur zum Experimentieren und wird sich \
-               möglicherweise nicht so verhalten, wie es zu erwarten ist. \
-               Weitere Informationen sind unter {2} verfügbar.</DIV>
+basedOn=based on
+welcomeMessage=<DIV color={0}>The {1} is currently under active development. \
+               The version you are running is only experimental and MAY NOT \
+               work as expected. Please refer to {2} for more information.</DIV>
 copyright=<DIV><font size=3 color={0}>(c)2003-2007 Copyright \
           <b>sip-communicator.org</b>. All rights reserved. Visit \
           <a href="http://sip-communicator.org">http://sip-communicator.org</a>.\
@@ -355,62 +387,251 @@ license=<DIV color={0}>The <b>SIP Communicator</b> is distributed under \
         http://www.gnu.org</a>).</DIV>
 
 # contact info
-contactDetails=Kontaktdetails
+contactDetails=Kontakt Details
 selectUser=Benutzer auswählen
-summary=Überblick
-contactSummaryDesc=Kontaktüberblick für
-extended=Erweitert
-contactExtendedDesc=Erweiterte Informationen für
-contactInfoNotSupported=Dieses Protokoll unterstützt derzeit keine Internet-Informationen. Wählen Sie ein anderes Protokoll.
-clickWeb=Klicken für die Web-Info
-webInfo=Web Info
-firstNameNS=Vorname:
-middleNameNS=Zweiter Name:
-lastNameNS=Nachname:
-ageNS=Alter:
-bdayNS=Geburtsdatum:
-genderNS=Geschlecht:
-emailNS=E-mail:
-phoneNS=Telefon:
-userPictures=Bilder
-notSpecified=[Not specified]
+contactSummaryDesc=Zusammenfassung für 
+contactExtendedDesc=Erweiterte Informationen für 
+contactInfoNotSupported=Dieses Protokoll unterstützt keine Server-basierten Informationen. Versuchen Sie ein anderes Protokoll.
+notSpecified=[Nicht angegeben]
 
-# icq accregwizz
-protocolName=ICQ
-protocolDescription=Das AOL/ICQ-Protokoll
-uin=ICQ UIN:
-password=Passwort:
-rememberPassword=Speichere Passwort
-aimUinAndPassword=UIN und Passwort
-registerNewAccount=Erstelle neues Benutzerkonto
-registerNewAccountText=Wenn Sie kein ICQ-Benutzerkonto haben, können Sie hier eines anlegen.
-existingAccount=* Dieses Benutzerkonto existiert bereits.
-ovverideServerOps=Überschreibe Voreinstellungen
-advancedOptions=Erweiterte Optionen
-proxy=Proxy
-proxyPort=Proxy port
-proxyType=Proxy type
-proxyUsername=Proxy username
-proxyPassword=Proxy password
+# dict accregwizz
+protocolNameDict=Dict
+protocolDescriptionDict=The Dict service protocol
+strategyList=List of strategies:
+strategyActu=Search strategies
+strategyDesc=Strategie is use to search similar words,if a translation was not found, thanks to different approaches. For example the Prefix strategies will search words which begin like the word you would translate.
+
+dictAccountInfoTitle=Dict Account Information
+firstAccount=This wizard will create your first Dict Account for you on dict.org.\n\n\
+You can add new dictionary by going on Account Registration Wizard. Fill the host Field with dictionnary you would like to add.
+
+# extendedcallsearchhistory
+advancedCallHistorySearch=&Advanced call history search
+search=Suche
+contactName=Kontakt Name
+since=Seit
+until=Bis
+callType=Anruftyp
+incoming=Eingehend
+outgoing=Ausgehend
+olderCalls=Ältere Anrufe
+all=Alle
+
+# generalconfig
+autoStartOption=Starte Messenger automatisch
+groupChatMessages=Gruppiere Nachrichten in einem Fenster.
+logHistory=Speichere Nachrichten
+showHistory=Zeige gespeicherte Nachrichten
+historySize=letzte Nachrichten in neuen Chats
+sendMessagesWith=Sende Nachrichten mit:
+enableTypingNotifications=aktiviere Tipp-Notifizierung 
+bringWindowToFront=Bringe Chat Fenster in den Vorderung
+errorPermission=Sie haben nicht die Berechtigung, den Autostart auszuschalten
+
+
+# gibberish accregwizz
+protocolNameGibberish=Gibberish
+protocolDescriptionGibberish=A SIP Communicator test protocol.
+userID=User ID:
+userAndPassword=Identification
+
+# icqaccregwizz
+protocolNameIcq=ICQ
+protocolDescriptionIcq=Das AOL ICQ service protocol
+uin=ICQ Nummer:
+icqRegisterNewAccountText=Wenn Sie keinen ICQ Account haben, klicken Sie um einen neuen zu erstellen.
+
+# irc accregwizz
+protocolNameIrc=IRC
+protocolDescriptionIrc=Das IRC protocol.
+nick=Nickname:
+infoPassword=Most IRC servers do not require password.
+autoNickChange=Automatically change nick when it's already used
+defaultPort=Use default port
+passwordNotRequired=My nickname doesn't require identification
+server=Hostname:
+port=Port:
+serverIRC=Server
+
+# jabber accregwizz
+protocolNameJabber=JABBER
+protocolDescriptionJabber=Das Jabber protocol
+jabberUsername=Jabber username
+password2=Confirm password
+userIDAndPassword=ID and Password
+cserver=Server
+server=Connect Server
+port=Port
+enableKeepAlive=Enable keep alive
+newAccountTitle=Jabber new account registration
+registerNewAccountText=In case you don't have a Jabber account, click on this button to create a new one.
+chooseTitle=Jabber new account server chooser
+chooseServerText=Choose the server for your new account in the list below.
+okLabel=&Ok
+cancelLabel=C&ancel
+chooseLabel=&Choose
+serverColumn=Server
+commentColumn=Comment
+resource=Resource
+priority=Priority
+
+xmppError=XMPP Error
+userExist=This user already exist on this server. Choose another user or server.
+unknownXmppError=Unknown XMPP error. Verify that the server name is correct.
+notSamePassword=The two entered password aren't the same.
+
+# mailbox
+outgoing=Outgoing Message:
+incoming=Incoming Messages:
+waitTime=Delay Until Call Sent to Voicemail
+maxMessageTime=Maximum Incoming Message Duration
+confirm=Confirm
+default=Defaults
+mailbox=Mailbox
+
+# msn accregwizz 
+protocolNameMsn=MSN
+protocolDescriptionMsn=Das MSN service protocol.
+id=Email:
+msnUinAndPassword=ID and Password
 
 # plugin manager
 activate=Aktivieren
 desactivate=Deaktivieren
-install=Installieren
+install=Install
 uninstall=Deinstallieren
 update=Aktualisieren
 new=Neues Plug-in
 plugins=Plug-ins
-url=URL
+cancel=Cancel
+url=Url
+chooseFile=Wähle Datei
 showSystemBundles=Zeige Systemkomponenten
 system=System
 
+# rss accregwizz
+protocolNameRss=RSS
+protocolDescriptionRss=Add your preferred RSS feeds into SIP Communicator !
+rssAccountExist=RSS account already exists!
+rssAccountInfo=This wizard will create an RSS account for you.\n\n\
+Note that you could have only one RSS account!\n\n\
+You can add RSS feeds to your contact list using the "Add contact" wizard. Fill in the contact address field with the URI of the RSS feed you would like to add.
+rssAccountInfoTitle=RSS Account Information
+rssAccountAttention=Please read attentively the information provided below!
+
+# simple accregwizz
+initialAccountRegistration=Die beliebtesten Protokolle in einem Schritt
+signup=Noch kein Konto?
+specialSignup=Noch kein Konto? Klicken Sie hier, um ein Konto anzulegen.
+cancel=Abbrechen
+
+# sipaccregwizz
+protocolNameSip=SIP
+protocolDescriptionSip=Das SIP protocol
+id=SIP id
+sipUinAndPassword=Benutzername und Passwort
+registrar=Registrar
+serverPort=Server port
+preferredTransport=Preferred transport
+enablePresence=Enable presence (SIMPLE)
+forceP2PPresence=Force peer-to-peer presence mode
+offlineContactPollingPeriod=Offline contacts polling period (in s.)
+subscriptionExpiration=Default subscription duration (in s.)
+presenceOptions=Presence Options
+keepAlive=Keep alive
+keepAliveMethod=Keep alive method
+keepAliveInterval=Keep alive interval
+keepAliveIntervalEx=Between 1 and 3600 seconds
+register=REGISTER
+
+# ssh accregwizz
+protocolNameSsh=SSH
+protocolDescriptionSsh=A Protocol to connect to remote machines over SSH.
+accountID=Account ID:
+identityFile=Identitity File:
+knownHosts=Known Hosts:
+accountDetails=SSH Account Details
+
 # status update
-enable=Aktivieren
-info=Information
+automaticStatus=Auto Away
+enableChangeStatus=Change status while away
+awayMinutes=Minutes before switching to away :
 infotext=Setze "Abwesend" als Status, wenn der Computer für X Minuten nicht verwendet wird. Der Status wird bei auf den vorangegangen Status zurückgesetzt, sobald der Computer wieder aktiv verwendet wird.
-menuEntry=Automatischer Status
-minutes=Minuten
-ok=OK
 
+# updatechecker
+dialogTitle=New version available
+dialogMessage1=<html>A new version of {0} is available for download.
+dialogMessage2=<br>{0} ({1}): <br>
+dialogMessageDebian=
+buttonDownload=Download
+buttonClose=Close
 
+# whiteboard
+invitationReceivedFormInfo={0} has invited you to join {1} whiteboard. You could accept, reject or ignore this invitation.
+whiteboardTitle=Whiteboard [Beta]
+whiteboardMenuItemText=Whiteboard
+whiteboardMenuItemNotSupportedTooltip=This contact does not support whiteboarding
+cancel=Cancel
+doNotAskAgain=Do not ask me again.
+closeSessionQuestion=Would you like to end current session ? If you choose "yes" the current session will be ended, otherwise only your whiteboard window will be closed.
+file=Datei
+draw=Zeichnen
+new=Neu
+save=Speichern
+open=Öffnen
+copy=Kopieren
+paste=Einfügen
+pen=Stift
+select=Auswählen
+line=Linie
+rectangle=Rechteck
+fillRectangle=Ausgefülltes Rechteck
+text=Text
+image=Bild
+polygon=Polygon
+fillPolygon=Ausgefülltes Polygon
+polyline=Pfad
+circle=Kreis
+fillCircle=Ausgefüllter Kreis
+color=Farbe
+modification=Änderung
+thickness=Dicke:
+send=Senden
+print=Drucken
+exit=Beenden
+edit=Bearbeiten
+grid=Gitternetz
+deselect=Deselect
+delete=Löschen
+properties=Einstellungen
+help=?
+About=Über
+
+# yahoo accregwizz
+protocolNameYahoo=YAHOO
+protocolDescriptionYahoo=Das Yahoo! Protokoll.
+id=Username:
+yahooUinAndPassword=Benutzername und Passwort
+
+# zero accregwizz
+protocolNameZeroconf=Zeroconf
+protocolDescriptionZeroconf=The Zeroconf (Bonjour) service protocol.
+firstname=Firname:
+
+# ssh protocol
+#Contact Details Seperator(must not be part of contact data stored as persistent
+# data)
+detailsSeperator=~
+
+# msn protocol
+newMail=Sie haben eine neue Email von {0} ({1}) mit dem Betreff: {2}
+
+# yahoo protocol
+newYahooMail=Neu Email, Betreff
+fromYahoo=Von
+
+# gtalk accregwizz
+protocolName=GOOGLE TALK
+protocolDescription=The Google Talk protocol
+gtalkUsername=Google Talk username
+gtalkRegisterNewAccountText=In case you don't have a Google Talk account, click on this button to create a new one.
