KeyBinding plugin contributed by Damian Johnson.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4013 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -522,7 +522,7 @@ msnUinAndPassword=ID and Password
 
 # plugin manager
 activate=Activate
-desactivate=Desactivate
+deactivate=Deactivate
 install=Install
 uninstall=Uninstall
 update=Update
@@ -660,3 +660,17 @@ protocolName=GOOGLE TALK
 protocolDescription=The Google Talk protocol
 gtalkUsername=Google Talk username
 gtalkRegisterNewAccountText=In case you don't have a Google Talk account, click on this button to create a new one.
+
+# key binding chooser
+keybindings=Keybindings
+chat-nextTab=Next Tab
+chat-previousTab=Previous Tab
+chat-copy=Copy
+chat-paste=Paste
+chat-openSmilies=Open Smilies
+chat-openHistory=Open History
+chat-close=Close
+chat-cut=Cut
+main-rename=Rename
+main-nextTab=Next Tab
+main-previousTab=Previous Tab
