--- a/resources/languages/resources_de.properties
+++ b/resources/languages/resources_de.properties
@@ -553,9 +553,9 @@ knownHosts=Known Hosts:
 accountDetails=SSH Account Details
 
 # status update
-automaticStatus=Auto Away
-enableChangeStatus=Change status while away
-awayMinutes=Minutes before switching to away :
+automaticStatus=Automatischer Status
+enableChangeStatus=Ändere Status wenn abwesend
+awayMinutes=Minuten bevor Status auf "abwesend" gesetzt wird:
 infotext=Setze "Abwesend" als Status, wenn der Computer für X Minuten nicht verwendet wird. Der Status wird bei auf den vorangegangen Status zurückgesetzt, sobald der Computer wieder aktiv verwendet wird.
 
 # updatechecker
