Committing support for early media with 183 session progress messages. Fixing status index for eXtended aways messages in jabber
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4027 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -663,14 +663,14 @@ gtalkRegisterNewAccountText=In case you don't have a Google Talk account, click 
 
 # key binding chooser
 keybindings=Keybindings
-chat-nextTab=Next Tab
-chat-previousTab=Previous Tab
+chat-nextTab=Next Chat Tab
+chat-previousTab=Previous Chat Tab
 chat-copy=Copy
 chat-paste=Paste
-chat-openSmilies=Open Smilies
-chat-openHistory=Open History
-chat-close=Close
+chat-openSmilies=Show Smilies
+chat-openHistory=Show History
+chat-close=Close Chat Window
 chat-cut=Cut
 main-rename=Rename
-main-nextTab=Next Tab
-main-previousTab=Previous Tab
+main-nextTab=Next Contact List Tab
+main-previousTab=Previous Contact List Tab
