Remove resources.properties, where not used any more.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4035 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -674,3 +674,14 @@ chat-cut=Cut
 main-rename=Rename
 main-nextTab=Next Contact List Tab
 main-previousTab=Previous Contact List Tab
+
+# Notification Configuration Form
+play=Play
+turnonall=Turn On All
+turnoffall=Turn Off All
+actions=Actions
+quickcontrols=Quick Controls
+restore=Restore Defaults
+playsound=Play a sound :
+execprog=Execute a program :
+displaypopup=Show a message in a pop-up window
