Set status to OFFLINE for rss feeds that are no longer available and propose the user to remove them
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4042 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -543,6 +543,8 @@ Note that you could have only one RSS account!\n\n\
 You can add RSS feeds to your contact list using the "Add contact" wizard. Fill in the contact address field with the URI of the RSS feed you would like to add.
 rssAccountInfoTitle=RSS Account Information
 rssAccountAttention=Please read attentively the information provided below!
+confirmRemoveMissingContactMessage=The folloing RSS flow seems to be no longer accessible. Would you like to remove it?\n\n Address: {0}
+confirmRemoveMissingContactTitle=Remove missing contactems to be no longer accessible. Would you like to remove it?\n\n 
 
 # simple accregwizz
 initialAccountRegistration=Configure all your favorite protocols in one click.
