Fix a problem with new mail notifications in yahoo.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4044 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -651,7 +651,7 @@ firstname=Firname:
 detailsSeperator=~
 
 # msn protocol
-newMail=You have one new Mail from {0} ({1}) with subject: {2}
+newMail=<b>You have one new Mail!</b><br/><b>From:</b> {0} {1} <br/><b>Subject:</b> {2} <br/>{3};
 
 # yahoo protocol
 newYahooMail=New mail, subject
