Show the error message coming from the server, when sending a message fails.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4054 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -214,9 +214,9 @@ moveToGroup=&Move to group
 moveContactError=&Contact cannot be moved
 msgDeliveryFailure=The above message could not be delivered
 msgDeliveryOfflineNotSupported=The protocol you are using doesn't support offline messages. You could try to reach this contact through another protocol or wait until he/she becomes online.
-msgDeliveryInternalError=An internal error occured. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues
+msgDeliveryInternalError=An internal error occured. This is most probably a bug. Please report it here: http://www.sip-communicator.org/index.php/Development/BugsAndIssues. Server returned error: {0}
 msgDeliveryUnknownError=Your message could not be delivered due to the following problem: {0}.
-msgNotDelivered=A network problem occured. Please check your network configuration and try again.
+msgNotDelivered=A network problem occured. Please check your network configuration and try again. Server returned error: {0}.
 msgReceived={0} has sent you a message
 msgSendConnectionProblem=You should be connected to be able to send messages.
 multipleLogins=You have logged in more than once with the same account. The following account: User name: {0}, Server name: {1} is currently disconnected.
@@ -325,7 +325,7 @@ uin=User identifier:
 unknown=Unknown user
 useCtrlEnterToSend=Use Ctrl-&Enter to send
 username=Username
-msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
+msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message. Server returned error: {0}
 unregisteredMessage=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
 updateAutomatically=Automatically install new updates
 updates=Updates
