- Revised status panel interface. - Revised contact list interface. - New chat rooms interface. - Main tabbed pane removed. - Revised call management in the GUI. - Some more gui modifications.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4408 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -28,6 +28,8 @@
 about=&About
 accept=&Accept
 account=Account
+accountMe=Me
+accountPreferences=Account preferences
 accountRegistrationWizard=Account Registration Wizard
 accounts=Accounts
 activateOnlyWhenMinimized=Activate only when minimized
@@ -46,13 +48,14 @@ addGroupErrorTitle=Add group Error
 addGroupExistError=The group {0} already exists in your contact list.
 addGroup=Create group
 addSubcontact=&Add subcontact
-advanced=Advanced
+advanced=&Advanced
 all=&All
 allContacts=&All contacts
 alwaysOnTop=Always on top
 appearance=Appearance
 application=Application
 apply=&Apply
+areCalling=are calling...
 at=at
 authAccepted=contact has accepted your authorization request.
 authenticationWindowTitle=Authentication requested
@@ -100,7 +103,7 @@ conference=Conference
 configure=&Configure
 configuration=Configuration
 connectionFailed=Connection failed
-connectionFailedMessage=<DIV>Connection failed for the following account: <BR> \
+connectionFailedMessage=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 User name: {0} <BR>\
 Server name: {1}. <BR>\
 Please check your network connection or contact <BR>\
@@ -177,6 +180,7 @@ invitationReceivedFormInfo={0} has invited you to join {1} chat room. You could 
 invite=&Invite
 inviteContactFormInfo=Please write the name of the user you would like to invite. If you wish you could also precise the reason for this invitation.
 inviteContactToChat=Invite contact to chat
+isCalling=is calling...
 join=&Join
 joinAs=J&oin as
 joinChatRoom=&Join chat room...
@@ -194,7 +198,7 @@ launchOnStartUp=Launch on start up
 leave=&Leave
 limitReachedForIp=You have too many existing registrations from the local IP address and the {0} server doesn't allow to open any more of them.
 login=&Login
-loginNetworkError=<DIV>Unable to log in with account:<BR>\
+loginNetworkError=Unable to log in with account: User name: {0}, Server name: {1}, due to a network failure. Please check your network connection.
 User name: {0}<BR>\
 Server name: {1}<BR>\
 due to a network failure. Please check your network connection.</DIV>
@@ -220,10 +224,12 @@ msgNotDelivered=A network problem occured. Please check your network configurati
 msgReceived={0} has sent you a message
 msgSendConnectionProblem=You should be connected to be able to send messages.
 multipleLogins=You have logged in more than once with the same account. The following account: User name: {0}, Server name: {1} is currently disconnected.
+myChatRooms=My chat rooms...
 name=Name
 network=Network
 networkFailure=Network failure
 next=&Next
+nextTooltip=Browse more recent conversations
 new=&New
 newAccount=Add &new account
 newMessage=New message...
@@ -245,6 +251,7 @@ options=Options
 passwd=Password
 paste=&Paste
 previous=Previous
+previousTooltip=Browse older conversations
 print=&Print
 protocol=Protocol
 providerNotConnected=You must be connected to be able to communicate.
@@ -320,12 +327,13 @@ subject=Subject
 summary=Summary
 today=Today
 tools=&Tools
+transparencyNotEnabled=Transparency is not supported by your current configuration.
 typeYourRequest=Type your request here
 uin=User identifier:
 unknown=Unknown user
 useCtrlEnterToSend=Use Ctrl-&Enter to send
 username=Username
-msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message. Server returned error: {0}
+msgDeliveryFailedUnknownError=Unknown error has occured while delivering your message.
 unregisteredMessage=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
 updateAutomatically=Automatically install new updates
 updates=Updates
@@ -452,7 +460,8 @@ sendMessagesWith=Send messages with:
 enableTypingNotifications=Enable typing notifications
 bringWindowToFront=Bring chat window to front
 errorPermission=You don't have enough privileges to remove autostart
-
+transparency=Transparency
+enableTransparency=Enable transparency
 
 # gibberish accregwizz
 protocolNameGibberish=Gibberish
