Provides the UI means for SIP Communicator to initiate a call-transfer.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4409 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -327,6 +327,9 @@ subject=Subject
 summary=Summary
 today=Today
 tools=&Tools
+transferCallButton=Trans&fer
+transferCallTargetLabel=&To:
+transferCallTitle=Transfer Call
 transparencyNotEnabled=Transparency is not supported by your current configuration.
 typeYourRequest=Type your request here
 uin=User identifier:
