Added internationalization to the proactive notification
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4446 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -253,6 +253,7 @@ paste=&Paste
 previous=Previous
 previousTooltip=Browse older conversations
 print=&Print
+proactiveNotification=is writing a message
 protocol=Protocol
 providerNotConnected=You must be connected to be able to communicate.
 quit=&Quit
