--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -223,6 +223,7 @@ passwd=Mot de passe :
 paste=&Coller
 previous=Précédent
 print=&Imprimer
+proactiveNotification=écrit un message
 protocol=Protocole
 providerNotConnected=Vous devez être connecté pour pouvoir communiquer.
 quit=&Quitter
