Integrating profiler4j. GSoC result of Vladimir.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4544 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -721,3 +721,6 @@ sasPeerUnsuportedTooltip=Securing call not supported/enabled by the other peer
 peerToggledOffSecurityMessage=Call peer toggled secure mode off
 peerToggledOffSecurityCaption=Secure Off
 sasUnsecuredAtPeerRequestTooltip=Call unsecured at peer request
+
+# Profiler4J
+profiler=Profiler4j
