Removed the "Toggle Security Off" tooltip as it is not available yet
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4560 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -702,8 +702,8 @@ execprog=Execute a program :
 displaypopup=Show a message in a pop-up window
 
 # ZRTP Securing
-toggleOffSecurity=Toggle OFF secure call mode
-toggleOnSecurity=Try toggle ON secure call mode
+toggleOffSecurity=Toggle secure call mode off
+toggleOnSecurity=Try toggle secure call mode on
 engineInitFailure=Securing engine initialization failure
 allowClearRequestFailure=Peer doesn't support unsecuring the call
 defaultSASTooltip=Secure status field
